--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -8,6 +8,7 @@
   padding: 12px 16px;
   border-radius: 4px;
   width: 100px;
+  font-size: 20px;
   color: white;
   outline: none;
   border: none;
